--- a/agenda/src/main/resources/application.properties
+++ b/agenda/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.port=8090
+server.port=8080
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
