adicionando dockerfile e dockercompose

--- a/agenda/src/main/resources/application.properties
+++ b/agenda/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/agenda
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #spring.jpa.show-sql: true
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/agenda?createDatabaseIfNotExist=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.h2.console.enabled=${H2_CONSOLE_ENABLED:true}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO:update}
 
 server.port=8080
 
