--- a/agenda/docker-compose.yaml
+++ b/agenda/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       - 'SPRING_DATASOURCE_USERNAME=myuser'
       - 'SPRING_DATASOURCE_PASSWORD=secret'
   front-app:
-    image: 'agendafront:1.0'
+    image: 'jhonyamn/agendafront:1.0'
     ports:
     - '5173:5173'
     
