--- a/agenda/docker-compose.yaml
+++ b/agenda/docker-compose.yaml
@@ -3,10 +3,10 @@ services:
   mysql:
     image: 'mysql:latest'
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      - 'MYSQL_DATABASE=agenda'
+      - 'MYSQL_PASSWORD=BHU*nji9'
+      - 'MYSQL_ROOT_PASSWORD=BHU*nji9'
+      - 'MYSQL_USER=banco'
     ports:
       - '3306'
   spring-app:
@@ -16,9 +16,9 @@ services:
     ports:
       - '8080:8080'
     environment:
-      - 'SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/mydatabase'
+      - 'SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/agenda'
       - 'SPRING_DATASOURCE_USERNAME=myuser'
-      - 'SPRING_DATASOURCE_PASSWORD=secret'
+      - 'SPRING_DATASOURCE_PASSWORD=banco'
   front-app:
     image: 'jhonyamn/agendafront:1.0'
     ports:
