--- a/agenda/docker-compose.yaml
+++ b/agenda/docker-compose.yaml
@@ -17,8 +17,8 @@ services:
       - '8080:8080'
     environment:
       - 'SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/agenda'
-      - 'SPRING_DATASOURCE_USERNAME=myuser'
-      - 'SPRING_DATASOURCE_PASSWORD=banco'
+      - 'SPRING_DATASOURCE_USERNAME=banco'
+      - 'SPRING_DATASOURCE_PASSWORD=BHU*nji9'
   front-app:
     image: 'jhonyamn/agendafront:2.0'
     ports:
