--- a/agenda/docker-compose.yaml
+++ b/agenda/docker-compose.yaml
@@ -9,6 +9,9 @@ services:
       - 'MYSQL_USER=banco'
     ports:
       - '3306'
+    networks:
+      - mynetwork
+
   spring-app:
     build: .
     depends_on:
@@ -19,10 +22,18 @@ services:
       - 'SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/agenda'
       - 'SPRING_DATASOURCE_USERNAME=banco'
       - 'SPRING_DATASOURCE_PASSWORD=BHU*nji9'
+    networks:
+      - mynetwork
+
   front-app:
     image: 'jhonyamn/agendafront:2.0'
     ports:
-    - '5173:5173'
+      - '5173:5173'
     environment:
-      - 'API_URL=http://spring-app:8080'
-    
+      - 'API_URL=http://spring-app:8080'  # Use o nome do serviço e a porta para acessar o spring-app
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
